Update for 2015 Hiking and Hamptons

--- a/source/index.html
+++ b/source/index.html
@@ -150,6 +150,17 @@
 	<h1 class="center">Recent Events</h1>
 	<hr>
 	<div class="row-fluid mbot">
+	
+		<div class="span4">
+			<a href="e_2015hiking.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2015_hiking.jpg" alt="" ></p>
+				<h5>Harriman State Park Hiking</h5>
+				<p>Hiked the Harriman State Park to appreciate the red fall leaves and had pot lock dinner.</p>
+			</div>
+			</a>
+		</div>
+		
 		<div class="span4">
 			<a href="e_cherry.html" class="box_link">
 			<div class="box">
@@ -166,16 +177,6 @@
 				<p><img src="images/event_thumb/cny2015_thumb.jpg" alt="" ></p>
 				<h5>Chinese New Year 2015</h5>
 				<p>We gathered for a Chinese New Year dinner for the year of the Sheep.</p>
-			</div>
-			</a>
-		</div>
-
-		<div class="span4">
-			<a href="e_hudson.html" class="box_link">
-			<div class="box">
-				<p><img src="images/event_thumb/hudson_thumb.jpg" alt="" ></p>
-				<h5>Hudson Valley Mansion Tour</h5>
-				<p>A tour of the Lyndhurst Mansion (Jay Gould Estate), one of the famous Gothic Revival mansions. </p>
 			</div>
 			</a>
 		</div>
