--- a/source/photos.html
+++ b/source/photos.html
@@ -75,7 +75,29 @@
 <section id="about-us" class="container main">
 	<h1 class="center">Choose an Event</h1>
 	<hr>
+	
+	<h2 class="center">2015</h2>
 	<div class="row-fluid mbot">
+		<div class="span4">
+			<a href="e_2015hiking.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2015_hiking.jpg" alt="" ></p>
+				<h5>Harriman State Park Hiking</h5>
+				<p>Hiked the Harriman State Park to appreciate the red fall leaves and had pot lock dinner.</p>
+			</div>
+			</a>
+		</div>
+
+		<div class="span4">
+			<a href="e_2015hamptons.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2015_hamptons.jpg" alt="" ></p>
+				<h5>Berry Picking and Barbeque</h5>
+				<p>A whole day trip that started with a lunch cuisine, leading to a berry picking session, and ended up with a barbeque.</p>
+			</div>
+			</a>
+		</div>		
+	
 		<div class="span4">
 			<a href="e_cherry.html" class="box_link">
 			<div class="box">
@@ -85,7 +107,12 @@
 			</div>
 			</a>
 		</div>
-
+	</div>
+	
+	
+	
+	
+	<div class="row-fluid mbot">
 		<div class="span4">
 			<a href="e_cny2015.html" class="box_link">
 			<div class="box">
@@ -95,6 +122,14 @@
 			</div>
 			</a>
 		</div>		
+
+	</div>
+	
+	
+	<h2 class="center">2014</h2>
+
+	<div class="row-fluid mbot">
+	
 	
 		<div class="span4">
 			<a href="e_hudson.html" class="box_link">
@@ -105,11 +140,7 @@
 			</div>
 			</a>
 		</div>
-	</div>
-	
-	
-
-	<div class="row-fluid mbot">
+		
 		<div class="span4">
 			<a href="e_biking.html" class="box_link">
 			<div class="box">
@@ -130,6 +161,10 @@
 			</a>
 		</div>	
 	
+	</div>
+	
+	
+	<div class="row-fluid mbot">
 	
 		<div class="span4">
 			<a href="e_cny2014.html" class="box_link">
@@ -142,8 +177,10 @@
 		</div>
 	</div>
 	
-	
+	<h2 class="center">2013</h2>	
+		
 	<div class="row-fluid mbot">
+	
 		<div class="span4">
 			<a href="e_palisade.html" class="box_link">
 			<div class="box">
