--- a/source/committee.html
+++ b/source/committee.html
@@ -74,7 +74,7 @@
 
 <section id="about-us" class="container main">
 	<!-- Meet the team -->
-	<h1 class="center">2014 Interim Executive Committee Members</h1>
+	<h1 class="center">2016 Executive Committee Members</h1>
 	<hr>
     <div class="row-fluid">
       <!-- Left Column -->
@@ -85,11 +85,11 @@
          <li>Vice President</li>
          <li>Vice President</li>
          <li>Treasurer</li>
-         <li>Social Director</li>
-         <li>Social Director</li>
+         <li>Committee Member</li>
 		 <li>Committee Member</li>
 		 <li>Committee Member</li>
 		 <li>Secretary</li>
+         <li>Secretary</li>
        </ul>
      </div>
      <!-- /Left Column -->
@@ -98,15 +98,16 @@
      <div class="span6">
       <h3 style="">Members</h3>
       <ul class="arrow">
-       <li>Elizabeth Wong</li>
+       <li>Angelie Cheung</li>
+       <li>Margaret So</li>       
 	   <li>Kaufman Ng</li>
-	   <li>Angelie Cheung</li>
 	   <li>Patrick Lee</li>
+       <li>Sarah So</li>
 	   <li>Carmen Ng</li>
-	   <li>Margaret So</li>
-	   <li>Vivian Yue</li>
-	   <li>Merlin Tong</li>
-	   <li>Elise Wong</li>
+       <li>Caroline Wong</li>
+       <li>Solomon Wong</li>
+       <li>Kadi Tsang</li>
+       
      </ul>
    </div>
    <!-- /Right Column -->
@@ -123,7 +124,7 @@
     <div class="container">
         <div class="row-fluid">
             <div class="span5 cp">
-                &copy; 2014 SPCCAANY. All Rights Reserved.
+                &copy; 2016 SPCCAANY. All Rights Reserved.
             </div>
             <!--/Copyright-->
 
