added email link

--- a/source/committee.html
+++ b/source/committee.html
@@ -116,6 +116,9 @@
 </div>
 </div>
 </div>
+    <div class="center">
+    Please feel free to contact us at <a href="mailto:spccaany@gmail.com">spccaany@gmail.com</a>.
+    </div>
 </section>
 
 <!--Footer-->
