--- a/source/committee.html
+++ b/source/committee.html
@@ -81,9 +81,9 @@
         <div class="span6 text-right">
         <h3>Committee</h3>
         <ul class="arrow emph">
-            <li>President</li>
-            <li>Vice President</li>
-            <li>Vice President</li>
+            <li>Chairman</li>
+            <li>Vice Chairman</li>
+            <li>Vice Chairman</li>
             <li>Treasurer</li>
             <li>Committee Member</li>
             <li>Committee Member</li>
