added Elizabeth as consultant

--- a/source/committee.html
+++ b/source/committee.html
@@ -90,6 +90,7 @@
             <li>Committee Member</li>
             <li>Secretary</li>
             <li>Secretary</li>
+            <li>Consultant</li>
         </ul>
         </div>
         <!-- /Left Column -->
@@ -107,6 +108,7 @@
             <li>Caroline Wong</li>
             <li>Solomon Wong</li>
             <li>Kadi Tsang</li>
+            <li>Elizabeth Wong</li>
          </ul>
         </div>
         <!-- /Right Column -->
