changed Elizabeth's last name to Hung

--- a/source/committee.html
+++ b/source/committee.html
@@ -108,7 +108,7 @@
             <li>Caroline Wong</li>
             <li>Solomon Wong</li>
             <li>Kadi Tsang</li>
-            <li>Elizabeth Wong</li>
+            <li>Elizabeth Hung</li>
          </ul>
         </div>
         <!-- /Right Column -->
