added chinese new year 2016

--- a/source/photos.html
+++ b/source/photos.html
@@ -76,6 +76,29 @@
 	<h1 class="center">Choose an Event</h1>
 	<hr>
 	
+	<h2 class="center">2016</h2>
+	<div class="row-fluid mbot">
+		<div class="span4">
+			<a href="e_2016cny.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2016/2016cny.jpg" alt=""></p>
+				<h5>Chinese New Year and Bi-Annual General Meeting</h5>
+				<p>Dinner and AGM meeting at Congree Village NYC Chinatown</p>
+			</div>
+			</a>
+		</div>
+
+		<div class="span4">
+			<a href="e_2015hamptons.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2015_hamptons.jpg" alt="" ></p>
+				<h5>Berry Picking and Barbeque</h5>
+				<p>A whole day trip that started with a lunch cuisine, leading to a berry picking session, and ended up with a barbeque.</p>
+			</div>
+			</a>
+		</div>		
+	</div>
+	
 	<h2 class="center">2015</h2>
 	<div class="row-fluid mbot">
 		<div class="span4">
