--- a/source/photos.html
+++ b/source/photos.html
@@ -73,7 +73,7 @@
     <!-- / .title -->  
 	
 <section id="about-us" class="container main">
-	<h1 class="center">Choose an Event</h1>
+	<h1 class="center">Photos from Past Events</h1>
 	<hr>
 	
 	<h2 class="center">2016</h2>
@@ -89,11 +89,11 @@
 		</div>
 
 		<div class="span4">
-			<a href="e_2015hamptons.html" class="box_link">
+			<a href="e_2016orchid.html" class="box_link">
 			<div class="box">
-				<p><img src="images/event_thumb/2015_hamptons.jpg" alt="" ></p>
-				<h5>Berry Picking and Barbeque</h5>
-				<p>A whole day trip that started with a lunch cuisine, leading to a berry picking session, and ended up with a barbeque.</p>
+				<p><img src="images/event_thumb/2016/2016orchid.jpg" alt="" ></p>
+				<h5>Orchidelirium</h5>
+				<p>Orachid show at the New York Botanical Garden</p>
 			</div>
 			</a>
 		</div>		
