updated home slide image and recent events

--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>About Us | SPCCAA-NY</title>
+    <title>SPCCAA-NY</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
@@ -151,35 +151,25 @@
 	<hr>
 	<div class="row-fluid mbot">
 	
-		<div class="span4">
-			<a href="e_2015hiking.html" class="box_link">
-			<div class="box">
-				<p><img src="images/event_thumb/2015_hiking.jpg" alt="" ></p>
-				<h5>Harriman State Park Hiking</h5>
-				<p>Hiked the Harriman State Park to appreciate the red fall leaves and had pot lock dinner.</p>
-			</div>
-			</a>
-		</div>
-		
-		<div class="span4">
-			<a href="e_cherry.html" class="box_link">
-			<div class="box">
-				<p><img src="images/event_thumb/cherry_thumb.jpg" alt="" ></p>
-				<h5>Cherry Blossom in New York</h5>
-				<p>Celebrated the coming of Spring with a beautiful Cherry Blossom visit! </p>
-			</div>
-			</a>
-		</div>
+        <div class="span4">
+            <a href="e_2016cny.html" class="box_link">
+            <div class="box">
+                <p><img src="images/event_thumb/2016/2016cny.jpg" alt=""></p>
+                <h5>Chinese New Year and Bi-Annual General Meeting</h5>
+                <p>Dinner and AGM meeting at Congree Village NYC Chinatown</p>
+            </div>
+            </a>
+        </div>
+        <div class="span4">
+            <a href="e_2016orchid.html" class="box_link">
+            <div class="box">
+                <p><img src="images/event_thumb/2016/2016orchid.jpg" alt="" ></p>
+                <h5>Orchidelirium</h5>
+                <p>Orachid show at the New York Botanical Garden</p>
+            </div>
+            </a>
+        </div>
 
-		<div class="span4">
-			<a href="e_cny2015.html" class="box_link">
-			<div class="box">
-				<p><img src="images/event_thumb/cny2015_thumb.jpg" alt="" ></p>
-				<h5>Chinese New Year 2015</h5>
-				<p>We gathered for a Chinese New Year dinner for the year of the Sheep.</p>
-			</div>
-			</a>
-		</div>
 	</div>
 	<p>&nbsp;</p>
 	<p></p>
