--- a/source/photos.html
+++ b/source/photos.html
@@ -96,7 +96,28 @@
 				<p>Orachid show at the New York Botanical Garden</p>
 			</div>
 			</a>
-		</div>		
+		</div>
+
+		<div class="span4">
+			<a href="e_2016fishing.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2016/2016-fishing.jpg" alt="" ></p>
+				<h5>Fishing Trip</h5>
+				<p>Fishing outing at Captree State Park and dinner at Flushing NY</p>
+			</div>
+			</a>
+		</div>
+	</div>
+	<div class="row-fluid mbot">
+		<div class="span4">
+			<a href="e_2016-fort-lee.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2016/2016-fort-lee-hiking.jpg" alt="" ></p>
+				<h5>Hiking at Fort Lee</h5>
+				<p>Hiking and dinner at Fort Lee, NJ</p>
+			</div>
+			</a>
+		</div>
 	</div>
 	
 	<h2 class="center">2015</h2>
@@ -131,9 +152,6 @@
 			</a>
 		</div>
 	</div>
-	
-	
-	
 	
 	<div class="row-fluid mbot">
 		<div class="span4">
