updated home page for 2016 photos

--- a/source/index.html
+++ b/source/index.html
@@ -150,26 +150,25 @@
 	<h1 class="center">Recent Events</h1>
 	<hr>
 	<div class="row-fluid mbot">
-	
-        <div class="span4">
-            <a href="e_2016cny.html" class="box_link">
-            <div class="box">
-                <p><img src="images/event_thumb/2016/2016cny.jpg" alt=""></p>
-                <h5>Chinese New Year and Bi-Annual General Meeting</h5>
-                <p>Dinner and AGM meeting at Congree Village NYC Chinatown</p>
-            </div>
-            </a>
-        </div>
-        <div class="span4">
-            <a href="e_2016orchid.html" class="box_link">
-            <div class="box">
-                <p><img src="images/event_thumb/2016/2016orchid.jpg" alt="" ></p>
-                <h5>Orchidelirium</h5>
-                <p>Orachid show at the New York Botanical Garden</p>
-            </div>
-            </a>
-        </div>
 
+        <div class="span4">
+            <a href="e_2016fishing.html" class="box_link">
+            <div class="box">
+                <p><img src="images/event_thumb/2016/2016-fishing.jpg" alt="" ></p>
+                <h5>Fishing Trip</h5>
+                <p>Fishing outing at Captree State Park and dinner at Flushing NY</p>
+            </div>
+            </a>
+        </div>
+        <div class="span4">
+            <a href="e_2016-fort-lee.html" class="box_link">
+            <div class="box">
+                <p><img src="images/event_thumb/2016/2016-fort-lee-hiking.jpg" alt="" ></p>
+                <h5>Hiking at Fort Lee</h5>
+                <p>Hiking and dinner at Fort Lee, NJ</p>
+            </div>
+            </a>
+        </div>
 	</div>
 	<p>&nbsp;</p>
 	<p></p>
@@ -187,7 +186,7 @@
     <div class="container">
         <div class="row-fluid">
             <div class="span5 cp">
-                &copy; 2014 SPCCAANY. All Rights Reserved.
+                &copy; 2017 SPCCAANY. All Rights Reserved.
             </div>
             <!--/Copyright-->
 
