fixed typo for Fort Lee page

--- a/source/e_2016-fort-lee.html
+++ b/source/e_2016-fort-lee.html
@@ -74,7 +74,7 @@
     <!-- / .title -->  
 
 	<section id="portfolio" class="container main">    
-		<h1 class="center">Hking at Fort Lee</h1>
+		<h1 class="center">Hiking at Fort Lee</h1>
 		<h5 class="center">November 2016</h5>
 		<h5 class="center">Fort Lee, NJ</h5>
 		<h5 class="center">Hiking and dinner at Fort Lee, NJ</h5>
