--- a/source/photos.html
+++ b/source/photos.html
@@ -76,6 +76,20 @@
 	<h1 class="center">Photos from Past Events</h1>
 	<hr>
 	
+	<h2 class="center">2017</h2>
+	<div class="row-fluid mbot">
+		<div class="span4">
+			<a href="e_2017cny.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2017/2017cny.jpg" alt=""></p>
+				<h5>Chinese New Year</h5>
+				<p>Chinese New Year Dinner at Congree Village NYC Chinatown</p>
+			</div>
+			</a>
+		</div>
+		
+	</div>
+
 	<h2 class="center">2016</h2>
 	<div class="row-fluid mbot">
 		<div class="span4">
@@ -269,7 +283,7 @@
     <div class="container">
         <div class="row-fluid">
             <div class="span5 cp">
-                &copy; 2014 SPCCAANY. All Rights Reserved.
+                &copy; 2017 SPCCAANY. All Rights Reserved.
             </div>
             <!--/Copyright-->
 
