--- a/source/photos.html
+++ b/source/photos.html
@@ -87,7 +87,15 @@
 			</div>
 			</a>
 		</div>
-		
+		<div class="span4">
+			<a href="e_2017_sands_point.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2017/2017-sands-point.jpg" alt=""></p>
+				<h5>Sands Point Preserve</h5>
+				<p>Visiting Sands Point Preserve and mansion in Long Island</p>
+			</div>
+			</a>
+		</div>		
 	</div>
 
 	<h2 class="center">2016</h2>
