use dash in filename

--- a/source/photos.html
+++ b/source/photos.html
@@ -87,8 +87,9 @@
 			</div>
 			</a>
 		</div>
+
 		<div class="span4">
-			<a href="e_2017_sands_point.html" class="box_link">
+			<a href="e_2017-sands-point.html" class="box_link">
 			<div class="box">
 				<p><img src="images/event_thumb/2017/2017-sands-point.jpg" alt=""></p>
 				<h5>Sands Point Preserve</h5>
