--- a/source/photos.html
+++ b/source/photos.html
@@ -87,7 +87,15 @@
 			</div>
 			</a>
 		</div>
-
+		<div class="span4">
+			<a href="2017-summer-get-together.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2017/2017-summer-get-together.jpg" alt=""></p>
+				<h5>Summer Get Together</h5>
+				<p>Get together at Elizabeth Wong's house</p>
+			</div>
+			</a>
+		</div>	
 		<div class="span4">
 			<a href="e_2017-sands-point.html" class="box_link">
 			<div class="box">
