--- a/source/photos.html
+++ b/source/photos.html
@@ -97,6 +97,15 @@
 			</a>
 		</div>	
 		<div class="span4">
+			<a href="2017-volunteering.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2017/2017-volunteering.jpg" alt=""></p>
+				<h5>Volunteering</h5>
+				<p>Volunteering at God's Love We Deliver</p>
+			</div>
+			</a>
+		</div>			
+		<div class="span4">
 			<a href="e_2017-sands-point.html" class="box_link">
 			<div class="box">
 				<p><img src="images/event_thumb/2017/2017-sands-point.jpg" alt=""></p>
