--- a/source/photos.html
+++ b/source/photos.html
@@ -104,7 +104,9 @@
 				<p>Volunteering at God's Love We Deliver</p>
 			</div>
 			</a>
-		</div>			
+		</div>
+	</div>
+	<div class="row-fluid mbot">
 		<div class="span4">
 			<a href="e_2017-sands-point.html" class="box_link">
 			<div class="box">
