--- a/source/photos.html
+++ b/source/photos.html
@@ -88,6 +88,15 @@
 			</a>
 		</div>
 		<div class="span4">
+			<a href="2017-karaoke-ms-lau-bday.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2017/2017-karaoke-ms-lau-bday.jpg" alt=""></p>
+				<h5>Karaoke and Ms Lau's Birthday Celebration</h5>
+				<p>Singing and dinner in NYC</p>
+			</div>
+			</a>
+		</div>
+		<div class="span4">
 			<a href="2017-summer-get-together.html" class="box_link">
 			<div class="box">
 				<p><img src="images/event_thumb/2017/2017-summer-get-together.jpg" alt=""></p>
@@ -96,6 +105,8 @@
 			</div>
 			</a>
 		</div>	
+	</div>
+	<div class="row-fluid mbot">
 		<div class="span4">
 			<a href="2017-volunteering.html" class="box_link">
 			<div class="box">
@@ -105,8 +116,6 @@
 			</div>
 			</a>
 		</div>
-	</div>
-	<div class="row-fluid mbot">
 		<div class="span4">
 			<a href="e_2017-sands-point.html" class="box_link">
 			<div class="box">
@@ -115,7 +124,7 @@
 				<p>Visiting Sands Point Preserve and mansion in Long Island</p>
 			</div>
 			</a>
-		</div>		
+		</div>
 	</div>
 
 	<h2 class="center">2016</h2>
